cleaned repos and publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,18 @@
 
 @string{aps = {American Physical Society,}}
 
+@string{icra = {International Conference on Robotics and Automation,}}
+
+@inproceedings{zeller2023icra,
+  abbr={ICRA},
+  bibtex_show={true},
+  title = {{Radar Velocity Transformer: Single-scan Moving Object Segmentation in Noisy Radar Point Clouds}},
+  author = {M. Zeller and V.S. Sandhu and B. Mersch and J. Behley and M. Heidingsfeld and C. Stachniss},
+  booktitle = icra,
+  year = {2023},
+  videourl = {https://youtu.be/dTDgzWIBgpE}
+}
+
 @book{einstein1956investigations,
   bibtex_show={true},
   title={Investigations on the Theory of the Brownian Movement},
