--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,8 +2,8 @@
 ---
 
 @string{aps = {American Physical Society,}}
-
 @string{icra = {International Conference on Robotics and Automation,}}
+@string{tro = { IEEE Transactions on Robotics (TRO),}}
 
 @inproceedings{zeller2023icra,
   abbr={ICRA},
@@ -13,6 +13,15 @@
   booktitle = icra,
   year = {2023},
   videourl = {https://youtu.be/dTDgzWIBgpE}
+}
+
+@article{zeller2024tro,
+abbr={TRO},
+bibtex_show={true},
+title = {Radar Instance Transformer: Reliable Moving Instance Segmentation in Sparse Radar Point Clouds},
+author = {M. Zeller and Sandhu, V.S. and B. Mersch and J. Behley and M. Heidingsfeld and C. Stachniss},
+booktitle = tro,
+year = {2024},
 }
 
 @book{einstein1956investigations,
